--- a/app/src/main/res/layout/content_save__page.xml
+++ b/app/src/main/res/layout/content_save__page.xml
@@ -13,18 +13,16 @@
         android:id="@+id/textView19"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
-        android:layout_marginBottom="608dp"
         android:fontFamily="@font/bolt_regular"
         android:text="SUBMIT DATA"
         android:textColor="#000"
         android:textSize="60sp"
-        app:layout_constraintBottom_toTopOf="@+id/Submit_To_Store_B"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.524"
+        app:layout_constraintHorizontal_bias="0.501"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintVertical_bias="0.078" />
 
     <Button
         android:id="@+id/Submit_To_Store_B"
@@ -38,10 +36,10 @@
         android:textSize="90sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.501"
+        app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.764" />
+        app:layout_constraintVertical_bias="0.643" />
 
     <Button
         android:id="@+id/Delete_Data_B"
@@ -56,16 +54,52 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.968" />
 
-    <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="746dp"
-        android:layout_height="540dp"
+    <TextView
+        android:id="@+id/end_PictureReminder_TB2"
+        android:layout_width="677dp"
+        android:layout_height="382dp"
+        android:fontFamily="@font/bolt_regular"
+        android:text="Take a picture of robot and upload it to Slack"
+        android:textAlignment="center"
+        android:textColor="#000000"
+        android:textSize="55sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintHorizontal_bias="0.504"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.25"
-        app:srcCompat="@drawable/download" />
+        app:layout_constraintVertical_bias="0.236" />
+
+    <TextView
+        android:id="@+id/submitInstructions_TV2"
+        android:layout_width="685dp"
+        android:layout_height="123dp"
+        android:fontFamily="@font/bolt_regular"
+        android:text=" (Instructions are in Slack)"
+        android:textAlignment="center"
+        android:textColor="#070000"
+        android:textSize="55sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.573"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.407" />
+
+    <TextView
+        android:id="@+id/nextPage_TV"
+        android:layout_width="797dp"
+        android:layout_height="169dp"
+        android:text="GO TO NEXT PAGE!!!!!!!!!!!!!!!!"
+        android:textAlignment="center"
+        android:textColor="#050000"
+        android:textSize="75sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.873" />
 
 </android.support.constraint.ConstraintLayout>
