--- a/app/src/main/res/layout/content_data__collection__page_1.xml
+++ b/app/src/main/res/layout/content_data__collection__page_1.xml
@@ -41,12 +41,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
-        android:fontFamily="@font/bolt_regular"
+        android:fontFamily="sans-serif"
         android:foregroundGravity="center_horizontal"
         android:text="Where can you place coral in Auto?"
         android:textAlignment="center"
-        android:textColor="#343434"
-        android:textSize="36sp"
+        android:textColor="#000000"
+        android:textSize="41sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.521"
@@ -120,15 +121,16 @@
 
     <TextView
         android:id="@+id/genAutoPickup_TV"
-        android:layout_width="590dp"
-        android:layout_height="87dp"
+        android:layout_width="600dp"
+        android:layout_height="101dp"
         android:layout_marginEnd="8dp"
-        android:fontFamily="@font/bolt_regular"
+        android:fontFamily="sans-serif"
         android:foregroundGravity="center_horizontal"
-        android:text="Can you pick up coral In Auto? If so, where?"
+        android:text="Can you pick up coral in Auto? If so, where?"
         android:textAlignment="center"
-        android:textColor="#343434"
-        android:textSize="36sp"
+        android:textColor="#000000"
+        android:textSize="40sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.519"
@@ -294,12 +296,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.821" />
-
-    <android.support.design.widget.TextInputLayout
-        android:layout_width="267dp"
-        android:layout_height="wrap_content"
-        tools:layout_editor_absoluteX="1dp"
-        tools:layout_editor_absoluteY="564dp"/>
 
 
 </android.support.constraint.ConstraintLayout>
