--- a/app/src/main/res/layout/content_data__collection_sandstorm.xml
+++ b/app/src/main/res/layout/content_data__collection_sandstorm.xml
@@ -12,15 +12,55 @@
     tools:showIn="@layout/activity_data__collection_sandstorm">
 
 
+    <CheckBox
+        android:id="@+id/teleopCoralReachL2_CB"
+        android:layout_width="119dp"
+        android:layout_height="66dp"
+        android:text="L2"
+        android:textSize="44sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.333"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.373" />
+
+    <CheckBox
+        android:id="@+id/teleopCoralReachL4_CB"
+        android:layout_width="119dp"
+        android:layout_height="71dp"
+        android:text="L4"
+        android:textSize="44sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.333"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.233" />
+
+    <CheckBox
+        android:id="@+id/teleopCoralReachL1_CB"
+        android:layout_width="119dp"
+        android:layout_height="66dp"
+        android:text="L1"
+        android:textSize="44sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.333"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.441" />
+
     <TextView
         android:id="@+id/teleopAlgaePlace_TV2"
         android:layout_width="325dp"
         android:layout_height="96dp"
-        android:fontFamily="@font/bolt_regular"
+        android:fontFamily="sans-serif"
         android:text="Where can you place Algae?"
         android:textAlignment="center"
-        android:textColor="#343434"
-        android:textSize="35sp"
+        android:textColor="#000000"
+        android:textSize="38sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/To_EndGame_B"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.89"
@@ -58,11 +98,12 @@
         android:id="@+id/teleopAlgaePickup_TV2"
         android:layout_width="336dp"
         android:layout_height="90dp"
-        android:fontFamily="@font/bolt_regular"
+        android:fontFamily="sans-serif"
         android:text="Where can you pick up Algae?"
         android:textAlignment="center"
-        android:textColor="#343434"
-        android:textSize="35sp"
+        android:textColor="#000000"
+        android:textSize="38sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/To_EndGame_B"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.107"
@@ -100,10 +141,11 @@
         android:id="@+id/teleopAlgaePlace_TV"
         android:layout_width="wrap_content"
         android:layout_height="61dp"
-        android:fontFamily="@font/bolt_regular"
+        android:fontFamily="sans-serif"
         android:text="Can you knock Algae off the Reef?"
-        android:textColor="#343434"
-        android:textSize="35sp"
+        android:textColor="#000000"
+        android:textSize="38sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/To_EndGame_B"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.502"
@@ -160,98 +202,10 @@
         android:textSize="35sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.799"
+        app:layout_constraintHorizontal_bias="0.753"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.33" />
-
-    <TextView
-        android:id="@+id/teleopCoralHighestReach_TV"
-        android:layout_width="386dp"
-        android:layout_height="120dp"
-        android:layout_marginEnd="8dp"
-        android:fontFamily="@font/bolt_regular"
-        android:text="What is the highest level your robot reaches?"
-        android:textAlignment="center"
-        android:textColor="#343434"
-        android:textSize="25sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.039"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.177" />
-
-    <CheckBox
-        android:id="@+id/teleopCoralGround_CB"
-        android:layout_width="wrap_content"
-        android:layout_height="76dp"
-        android:text="Ground"
-        android:textSize="35sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.804"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.268" />
-
-    <RadioGroup
-        android:layout_width="233dp"
-        android:layout_height="311dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.407"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.301">
-
-        <RadioButton
-            android:id="@+id/teleopCoralReachL4_RB"
-            android:layout_width="165dp"
-            android:layout_height="67dp"
-            android:text="L4"
-            android:textSize="38sp" />
-
-        <RadioButton
-            android:id="@+id/teleopCoralReachL3_RB"
-            android:layout_width="169dp"
-            android:layout_height="94dp"
-            android:text="L3"
-            android:textSize="38sp" />
-
-        <RadioButton
-            android:id="@+id/teleopCoralReachL2_RB"
-            android:layout_width="169dp"
-            android:layout_height="75dp"
-            android:text="L2"
-            android:textSize="38sp" />
-
-        <RadioButton
-            android:id="@+id/teleopCoralReachL1_RB"
-            android:layout_width="169dp"
-            android:layout_height="67dp"
-            android:text="L1"
-            android:textSize="38sp" />
-
-    </RadioGroup>
-
-    <TextView
-        android:id="@+id/teleopCoralPickup_TV"
-        android:layout_width="299dp"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:fontFamily="@font/bolt_regular"
-        android:text="Where can you pick up coral?"
-        android:textAlignment="center"
-        android:textAllCaps="false"
-        android:textColor="#343434"
-        android:textSize="25sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.91"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.169" />
+        app:layout_constraintVertical_bias="0.331" />
 
     <CheckBox
         android:id="@+id/teleopCoralTrough_CB"
@@ -261,10 +215,60 @@
         android:textSize="35sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.975"
+        app:layout_constraintHorizontal_bias="0.92"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.388" />
+        app:layout_constraintVertical_bias="0.389" />
+
+    <CheckBox
+        android:id="@+id/teleopCoralGround_CB"
+        android:layout_width="wrap_content"
+        android:layout_height="76dp"
+        android:text="Ground"
+        android:textSize="35sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.758"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.269" />
+
+    <TextView
+        android:id="@+id/teleopCoralHighestReach_TV"
+        android:layout_width="386dp"
+        android:layout_height="120dp"
+        android:layout_marginEnd="8dp"
+        android:fontFamily="sans-serif"
+        android:text="What is the highest level your robot reaches?"
+        android:textAlignment="center"
+        android:textColor="#000000"
+        android:textSize="30sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.039"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.177" />
+
+    <TextView
+        android:id="@+id/teleopCoralPickup_TV"
+        android:layout_width="299dp"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:fontFamily="sans-serif"
+        android:text="Where can you pick up coral?"
+        android:textAlignment="center"
+        android:textAllCaps="false"
+        android:textColor="#000000"
+        android:textSize="30sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.91"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.169" />
 
     <ImageView
         android:id="@+id/teleopCoralAlgaeReef_IV"
@@ -376,6 +380,19 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:barrierDirection="top" />
+
+    <CheckBox
+        android:id="@+id/teleopCoralReachL3_CB"
+        android:layout_width="119dp"
+        android:layout_height="66dp"
+        android:text="L3"
+        android:textSize="44sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.333"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.304" />
 
 
 </android.support.constraint.ConstraintLayout>
