--- a/app/src/main/res/layout/content_actual__submit.xml
+++ b/app/src/main/res/layout/content_actual__submit.xml
@@ -15,7 +15,7 @@
         android:layout_height="220dp"
         android:layout_marginTop="200dp"
         android:fontFamily="@font/bolt_regular"
-        android:text="Please Click Below"
+        android:text="Please Click Below!!!"
         android:textAlignment="center"
         android:textColor="#000"
         android:textSize="100sp"
@@ -37,43 +37,21 @@
         android:textSize="85sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <ImageView
-        android:id="@+id/redArrow2_IV"
-        android:layout_width="226dp"
-        android:layout_height="316dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.517"
+        app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.435"
-        app:srcCompat="@drawable/pngimg_com___red_arrow_png68" />
+        app:layout_constraintVertical_bias="0.689" />
 
     <ImageView
-        android:id="@+id/redArrow1_IV"
-        android:layout_width="226dp"
-        android:layout_height="316dp"
+        android:id="@+id/imageView3"
+        android:layout_width="469dp"
+        android:layout_height="350dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.064"
+        app:layout_constraintHorizontal_bias="0.501"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.44"
-        app:srcCompat="@drawable/pngimg_com___red_arrow_png68" />
-
-    <ImageView
-        android:id="@+id/redArrow3_IV"
-        android:layout_width="226dp"
-        android:layout_height="316dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.972"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.44"
-        app:srcCompat="@drawable/pngimg_com___red_arrow_png68" />
+        app:layout_constraintVertical_bias="0.477"
+        app:srcCompat="@drawable/screenshot_2025_01_29_183643_removebg_preview" />
 
 </android.support.constraint.ConstraintLayout>
