--- a/app/src/main/res/layout/content_data_collection_end_game.xml
+++ b/app/src/main/res/layout/content_data_collection_end_game.xml
@@ -7,7 +7,10 @@
     android:background="#A5A5A5"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".data_collection_end_game"
-    tools:showIn="@layout/activity_data_collection_end_game">
+    tools:showIn="@layout/activity_data_collection_end_game"
+    android:focusableInTouchMode="true"
+    android:focusable="true">
+
 
     <TextView
         android:id="@+id/Other_TV"
@@ -22,9 +25,80 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.372" />
+        app:layout_constraintVertical_bias="0.041" />
+
+    <TextView
+        android:id="@+id/end_HumanPlayerPreference_TB"
+        android:layout_width="674dp"
+        android:layout_height="108dp"
+        android:fontFamily="sans-serif"
+        android:text="Do you have a preference on where your human player is?"
+        android:textAlignment="center"
+        android:textColor="#000000"
+        android:textSize="45sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.395" />
 
     <RadioGroup
+        android:id="@+id/radioGroup3"
+        android:layout_width="726dp"
+        android:layout_height="98dp"
+        android:orientation='horizontal'
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.527"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.487">
+
+        <RadioButton
+            android:id="@+id/endHumanPlayerStation_RB"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Coral"
+            android:textSize="45sp" />
+
+        <RadioButton
+            android:id="@+id/endHumanPlayerProcessor_RB"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Processor"
+            android:textSize="45sp"
+            android:typeface="normal" />
+
+        <RadioButton
+            android:id="@+id/endHumanPlayerNone_RB"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:text="No Preference"
+            android:textSize="45sp" />
+    </RadioGroup>
+
+    <TextView
+        android:id="@+id/end_driveBase_TB"
+        android:layout_width="674dp"
+        android:layout_height="109dp"
+        android:fontFamily="sans-serif"
+        android:text="What type of Drive Base do you use?"
+        android:textAlignment="center"
+        android:textColor="#000000"
+        android:textSize="45sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.146" />
+
+    <RadioGroup
+        android:id="@+id/radioGroup"
         android:layout_width="747dp"
         android:layout_height="80dp"
         android:orientation="horizontal"
@@ -32,10 +106,10 @@
         android:scrollbarAlwaysDrawVerticalTrack="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.358"
+        app:layout_constraintHorizontal_bias="0.603"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.823">
+        app:layout_constraintVertical_bias="0.715">
 
         <RadioButton
             android:id="@+id/endPreferenceAlgae_RB"
@@ -63,142 +137,25 @@
 
     <TextView
         android:id="@+id/otherAlgaeSpecialist_TV"
-        android:layout_width="690dp"
+        android:layout_width="757dp"
         android:layout_height="wrap_content"
         android:fontFamily="sans-serif"
-        android:text="Do you focus on Algae or Coral?"
+        android:text="Do you focus on scoring Algae or Coral?"
         android:textAlignment="center"
         android:textColor="#000000"
         android:textSize="45sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.481"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.758" />
-
-    <RadioGroup
-        android:id="@+id/End_HumanPlayerPreference_RG"
-        android:layout_width="wrap_content"
-        android:layout_height="73dp"
-        android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.545"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.685">
-
-        <RadioButton
-            android:id="@+id/endDefenseYes_RB"
-            android:layout_width="200dp"
-            android:layout_height="75dp"
-            android:text="Yes"
-            android:textSize="45sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.108"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.169" />
-
-        <RadioButton
-            android:id="@+id/endDefenseNo_RB"
-            android:layout_width="200dp"
-            android:layout_height="75dp"
-            android:text="No"
-            android:textSize="45sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.611"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.168" />
-
-    </RadioGroup>
-
-    <CheckBox
-        android:id="@+id/endHumanPlayerStation_CB"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:enabled="true"
-        android:text="Station"
-        android:textSize="40sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.664"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.543" />
-
-    <CheckBox
-        android:id="@+id/endHumanPlayerProcessor_CB"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:enabled="true"
-        android:text="Processor"
-        android:textSize="40sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.323"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.543" />
-
-    <TextView
-        android:id="@+id/endDefense_TV"
-        android:layout_width="676dp"
-        android:layout_height="80dp"
-        android:fontFamily="sans-serif"
-        android:text="Do you prefer to play defense?"
-        android:textAlignment="center"
-        android:textColor="#000000"
-        android:textSize="45sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.427"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.623" />
-
-    <TextView
-        android:id="@+id/end_HumanPlayerPreference_TB"
-        android:layout_width="654dp"
-        android:layout_height="108dp"
-        android:fontFamily="sans-serif"
-        android:text="Do you have a preference on where your human player is?"
-        android:textAlignment="center"
-        android:textColor="#000000"
-        android:textSize="45sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.437"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.465" />
-
-    <TextView
-        android:id="@+id/TeleEnd_Endgame_TV"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/bolt_regular"
-        android:text="ENDGAME"
-        android:textColor="#000000"
-        android:textSize="60sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.043" />
+        app:layout_constraintVertical_bias="0.621" />
 
     <Button
         android:id="@+id/To_Submission_B"
-        android:layout_width="525dp"
-        android:layout_height="125dp"
+        android:layout_width="591dp"
+        android:layout_height="172dp"
         android:layout_marginStart="131dp"
         android:layout_marginEnd="130dp"
         android:fontFamily="@font/bolt_regular"
@@ -206,63 +163,60 @@
         android:textSize="50dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.949" />
+        app:layout_constraintVertical_bias="0.906" />
 
-    <TextView
-        android:id="@+id/endHangLocation_TB"
-        android:layout_width="790dp"
-        android:layout_height="97dp"
-        android:fontFamily="sans-serif"
-        android:text="Can you Hang? If so, where?"
-        android:textAlignment="center"
-        android:textColor="#000000"
-        android:textSize="45sp"
-        android:textStyle="bold"
+    <RadioGroup
+        android:layout_width="578dp"
+        android:layout_height="90dp"
+        android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.144"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.12" />
+        app:layout_constraintVertical_bias="0.271">
 
-    <CheckBox
-        android:id="@+id/endHangShallow_CB"
-        android:layout_width="wrap_content"
-        android:layout_height="71dp"
-        android:text="Shallow"
+        <RadioButton
+            android:id="@+id/end_Swerve_RB"
+            android:layout_width="200dp"
+            android:layout_height="match_parent"
+            android:orientation="horizontal"
+            android:text="Swerve"
+            android:textSize="45sp" />
+
+        <RadioButton
+            android:id="@+id/end_Tank_RB"
+            android:layout_width="150dp"
+            android:layout_height="match_parent"
+            android:text="Tank"
+            android:textSize="45sp" />
+
+        <RadioButton
+            android:id="@+id/end_OtherBase_RB"
+            android:layout_width="174dp"
+            android:layout_height="match_parent"
+            android:text="Other:"
+            android:textSize="45sp" />
+    </RadioGroup>
+
+    <EditText
+        android:id="@+id/end_otherText_TB"
+        android:layout_width="203dp"
+        android:layout_height="79dp"
+        android:editable="true"
+        android:ems="10"
+        android:inputType="text"
         android:textSize="40sp"
+        android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.224"
+        app:layout_constraintHorizontal_bias="0.911"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.197" />
-
-    <CheckBox
-        android:id="@+id/endHangDeep_CB"
-        android:layout_width="wrap_content"
-        android:layout_height="71dp"
-        android:text="Deep"
-        android:textSize="40sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.716"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.316" />
-
-    <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="173dp"
-        android:layout_height="219dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.499"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.22"
-        app:srcCompat="@drawable/screenshot_2025_01_22_at_7_24_42_pm_removebg_preview" />
+        app:layout_constraintVertical_bias="0.268" />
 
 
 </android.support.constraint.ConstraintLayout>
